# BetterFleet

./: .gitignore  CLAUDE.md  LICENSE  README.md  betterfleet.updater.json  crowdin.yml  package-lock.json  package.json  vite.config.ts
.claude/: .gitignore
.claude/docs/: README.md  architecture.md  backend.md  conventions.md  frontend.md  gotchas.md  recipes.md  workflows.md
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: check-untranslation.mjs  seed-missing-translations.mjs  set-version-from-tag.mjs
.github/workflows/: ci.yml  crowdin-seed.yml  crowdin.yml  node.js.yml  pr_node.js.yml  pr_quarkus.java.yml  publish.yml  quarkus.java.yml  release.yml
backend/: .dockerignore  Dockerfile  README.md  pom.xml
deployement/: DEPLOYEMENT.md
deployment/: .env  DEPLOYMENT.md  docker-compose.yml  init.sql  nginx.conf
deployment/dev/: .env  docker-compose.yml
deployment/helm/betterfleet/: .helmignore  Chart.yaml  README.md  values-k3s.yaml  values.yaml
deployment/keycloak/config/: betterfleet-realm.json
frontend/: .env.development  .env.production  .eslintrc.cjs  .gitignore  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/assets/conf/: offsets.json  patterns.json
frontend/src-tauri/src/: api.rs  fetch_informations.rs  get_player_count.rs  get_player_name.rs  main.rs  memory_helper.rs  offsets_getter.rs  process_finder.rs  window_interaction.rs
frontend/src-tauri/src/api/: fetch_server_ip.rs  get_player_count.rs  get_player_name.rs
frontend/src-tauri/src/network/: address_port_pair.rs  my_link_type.rs  network_tools.rs  packet_filters_fields.rs
frontend/src/assets/: font.scss  style.scss
frontend/src/components/: Config.vue  Fleet.vue
frontend/src/objects/: Fleet.ts  HTTPAxios.ts  Player.ts  SessionRunner.ts  SotServer.ts  Utils.ts  WebSocet.ts
frontend/src/router/: index.ts
nuxt-website/: i18n.config.ts  nuxt.config.ts  package-lock.json  package.json
nuxt-website/assets/: font.scss
nuxt-website/assets/locales/: de.json  es.json
nuxt-website/components/: HeaderVue.vue
nuxt-website/layouts/: default.vue
nuxt-website/objects/: BugReport.ts
nuxt-website/objects/i18n/: index.ts
nuxt-website/objects/stores/: appStore.ts
scripts/: bump-version-from-tag.sh
src-tauri/: tauri.conf.json
webapp/: .env.development  .env.production  .prettierignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
webapp/src/: App.vue  main.ts
webapp/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
webapp/src-tauri/capabilities/: default.json
webapp/src-tauri/icons/: icon.icns
webapp/src-tauri/permissions/: allow-app-commands.toml
webapp/src-tauri/src/: api.rs  diagnostics.rs  fetch_informations.rs  main.rs  window_interaction.rs
webapp/src-tauri/templates/nsis/: installer.nsis
webapp/src-tauri/tests/fixtures/: detection-corpus.json
webapp/src-tauri/wix/: registry.wxs
webapp/src/assets/: font.scss  style.scss
webapp/src/components/: Authentication.vue  AuthenticationComponent.vue  Config.vue  Fleet.vue  FleetMenuNavigator.vue  Home.vue  OverlayPlayerRow.spec.ts  OverlayPlayerRow.vue  OverlayView.spec.ts  OverlayView.vue  WhatsNewModal.vue
webapp/src/objects/: Color.ts  Fleet.ts  Player.ts  SotServer.ts  Utils.ts  WebSocet.ts  WhatsNew.spec.ts  WhatsNew.ts
webapp/src/router/: index.ts
website/: .env.development  .env.production  Dockerfile  env_runtime_editor.sh  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
website/public/: robots.txt  sitemap.xml
website/src/: App.vue  main.ts  vite-env.d.ts
website/src/assets/: _breakpoints.scss  font.scss  style.scss
website/src/components/: ConsoleGuidePage.vue  GlobeCard.vue  Home.vue  HomeComponent.vue  NotFoundPage.vue  Reports.vue  ReportsComponent.vue  StatisticsPage.vue  Support.vue  SupportComponent.vue  Tutorial.vue  TutorialComponent.vue
website/src/objects/: AllianceStats.ts  BugReport.ts  CountryCentroids.ts  Github.ts  HTTPAxios.spec.ts  HTTPAxios.ts  Stats.ts
website/src/router/: index.ts
website/src/vue/: FaqCollapse.vue  Separator.vue  (+1 more)
(+264 files in other folders)
