[package]
name = "better_fleet"
version = "2.1.0"
description = "A better fleet creator"
authors = ["Zelytra", "dadodasyra"]
license = ""
repository = ""
default-run = "better_fleet"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.0", features = [ "window-start-dragging", "window-show", "window-set-focus", "window-set-always-on-top", "window-hide", "global-shortcut-all", "http-all", "updater", "shell-all"] }
anyhow = "1.0.80"
socket2 = "0.5.6"
tokio = { version = "1.43.1", features = ["full"] }
winapi = { version = "0.3.9", features = ["winsock2", "winuser"] }
etherparse = "0.15.0"
hostname = "0.4.0"
sysinfo = "0.30.6"
netstat2 = "0.9.1"
idna = "1.0.3"
log = "^0.4"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["colored"] }
lazy_static = "1.4.0"
# Native audio for the launch-countdown sound (#671): webview audio is suspended when the window is
# occluded behind the game, native playback is not.
rodio = "0.20.1"
# Discord Rich Presence over the local client's IPC (#684) — no bot, no OAuth.
discord-rich-presence = "0.2.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
